# esp32s3DisplayTest

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
main/2DSofwareRenderer/: .gitignore  CMakeLists.txt
main/2DSofwareRenderer/Linux/: .gitignore  README
main/2DSofwareRenderer/OpenGLWrapper/: main.cpp
main/2DSofwareRenderer/SoftRendererLib/: CMakeLists.txt  CMakeSources.cmake
main/2DSofwareRenderer/SoftRendererLib/src/: CMakeLists.txt
main/2DSofwareRenderer/SoftRendererLib/src/core/: CMakeLists.txt  RenderContext2D.cpp  RenderContext2D.h  RendererBase.cpp  RendererBase.h
main/2DSofwareRenderer/SoftRendererLib/src/core/Renderers/: BasicTextureRenderer.cpp  BasicTextureRenderer.h  CMakeLists.txt  PrimitivesRenderer.cpp  PrimitivesRenderer.h  ScaleTextureRenderer.cpp  ScaleTextureRenderer.h  TransformedTextureRenderer.cpp  TransformedTextureRenderer.h
main/2DSofwareRenderer/SoftRendererLib/src/data/: CMakeLists.txt  Color.cpp  Color.h  Texture.cpp  Texture.h  Transform.h
main/2DSofwareRenderer/SoftRendererLib/src/data/BlendMode/: BlendFunctions.cpp  BlendFunctions.h  BlendMode.h  CMakeLists.txt
main/2DSofwareRenderer/SoftRendererLib/src/data/BlendMode/Platform/arm_neon/: BlendFunctions.cpp
main/2DSofwareRenderer/SoftRendererLib/src/data/BlendMode/Platform/generic/: BlendFunctions.cpp
main/2DSofwareRenderer/SoftRendererLib/src/data/PixelFormat/: CMakeLists.txt  PixelConverter.cpp  PixelConverter.h  PixelFormat.h  PixelFormatInfo.cpp  PixelFormatInfo.h
main/2DSofwareRenderer/SoftRendererLib/src/data/PixelFormat/Platform/arm_neon/: PixelConverter.cpp
main/2DSofwareRenderer/SoftRendererLib/src/data/PixelFormat/Platform/generic/: PixelConverter.cpp
main/2DSofwareRenderer/SoftRendererLib/src/include/: SoftRenderer.h
main/2DSofwareRenderer/SoftRendererLib/src/util/: CMakeLists.txt  MemHandler.cpp  MemHandler.h
main/2DSofwareRenderer/SoftRendererLinuxDemo/: main.cpp
main/2DSofwareRenderer/scripts/: imageco.py
main/LCD_Driver/: ST7701S.c  ST7701S.h
